<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Logo -->
        <ImageView
            android:id="@+id/loginIcon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/domain_icon_desc"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp" />


        <!-- Register Domain -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_domain"
            android:textStyle="bold"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/domainSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/domain_hint"
            android:inputType="textUri"
            android:autofillHints="username"
            android:layout_marginTop="12dp" />

        <Button
            android:id="@+id/searchDomainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_button"
            android:backgroundTint="#2196F3"
            android:textColor="#FFFFFF"
            android:layout_marginTop="8dp" />

        <!-- Transfer Domain -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer_domain"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="24dp" />

        <EditText
            android:id="@+id/domainTransfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transfer_hint"
            android:inputType="textUri"
            android:autofillHints="username"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/authCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_code_hint"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/transferDomainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transfer_button"
            android:backgroundTint="#2196F3"
            android:textColor="#FFFFFF"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/btnBackToDashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#2196F3"
            android:layout_gravity="center"
            android:text="Back to Dashboard"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:backgroundTint="#F44336"
            android:textColor="#FFFFFF"
            android:layout_marginTop="24dp" />

    </LinearLayout>
</ScrollView>


