<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_title"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginBottom="16dp" />

        <!-- Cart Item -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_item"
            android:layout_marginTop="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_price" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_total"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <!-- Checkout Button -->
        <Button
            android:id="@+id/checkoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cart_checkout"
            android:backgroundTint="#2196F3"
            android:textColor="#FFFFFF"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnBackToDashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back to Dashboard"
            android:backgroundTint="#2196F3"
            android:textColor="#FFFFFF"
            android:layout_marginTop="24dp" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:backgroundTint="#F44336"
            android:textColor="#FFFFFF"
            android:layout_marginTop="24dp" />


    </LinearLayout>
</ScrollView>
